# MLIR-AscendC

./: .gitignore  CMakeLists.txt  README.md
include/mlir-ascendc/: InitAllDialects.h  InitAllExtensions.h  InitAllPasses.h  InitAllTranslations.h
include/mlir-ascendc/Conversion/: AscendCConversionPasses.h  AscendCConversionPasses.td  CMakeLists.txt
include/mlir-ascendc/Conversion/AscendCToEmitC/: AscendCToEmitC.h
include/mlir-ascendc/Dialect/: CMakeLists.txt
include/mlir-ascendc/Dialect/AscendC/IR/: AscendC.h  AscendC.td  AscendCAttributes.td  AscendCBase.td  AscendCTypes.td  CMakeLists.txt
include/mlir-ascendc/Dialect/AscendC/TransformOps/: AscendCTransformOps.h  AscendCTransformOps.td  CMakeLists.txt
include/mlir-ascendc/Dialect/AscendC/Transforms/: CMakeLists.txt  Passes.h  Passes.td  Transforms.h
lib/: CMakeLists.txt
lib/Conversion/: CMakeLists.txt
lib/Conversion/AscendCToEmitC/: AscendCToEmitC.cpp  CMakeLists.txt
lib/Dialect/AscendC/IR/: AscendC.cpp  CMakeLists.txt
lib/Dialect/AscendC/TransformOps/: AscendCTransformOps.cpp  CMakeLists.txt  DialectExtension.cpp  Promotion.cpp
lib/Dialect/AscendC/Transforms/: AscendCAutoComplete.cpp  AscendCBufferizationSimplification.cpp  AscendCJustification.cpp  AscendCTestLegality.cpp  CMakeLists.txt  ConvertToAscendC.cpp  LegalizeFuncForAscendC.cpp
test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
test/Dialect/AscendC/: add_custom.mlir  check-legality.mlir  invalid.mlir  ops.mlir  types.mlir
test/tools/ascendc-mlir-opt/: commandline.mlir
test/tools/mlir-ascendc-compile/: add-template.mlir  linalg_add.mlir  lit.local.cfg
tools/: CMakeLists.txt
tools/ascendc-mlir-opt/: CMakeLists.txt  ascendc-mlir-opt.cpp
tools/ascendc-mlir-translate/: CMakeLists.txt  ascendc-mlir-translate.cpp
tools/mlir-ascendc-compile/: CMakeLists.txt  Options.h  PassPipelines.cpp  PassPipelines.h  mlir-ascendc-compile.cpp
